--- a/pms/views/inherited_res_partner_views.xml
+++ b/pms/views/inherited_res_partner_views.xml
@@ -33,6 +33,7 @@
             </xpath>
 
             <xpath expr="//field[@name='user_id']" position="after">
+                <field name="company_type" invisible="1" />
                 <field name="is_tour_operator" attrs="{'invisible': [('company_type','!=','company')]}"/>
             </xpath>
 
