--- a/pms/views/inherited_account_payment_views.xml
+++ b/pms/views/inherited_account_payment_views.xml
@@ -30,7 +30,7 @@
                         attrs="{'invisible': [('state','=','draft')]}"/>
                     <button string="Delete" name="delete" type="object" class="oe_read_only btn-primary"
                         attrs="{'invisible': [('state','=','draft')]}"/>
-                    <button string="Cancel" class="oe_read_only btn-default" special="cancel"/>
+                    <button string="Cancel" name="cancel"  class="oe_read_only btn-default" special="cancel"/>
                     <field name="state" widget="statusbar" statusbar_visible="draft,posted,reconciled,cancelled"/>
                 </header>
                 <sheet>
@@ -55,26 +55,45 @@
                     </div>
                     <group>
                         <group>
-                            <field name="payment_type" invisible="1"/>
-                            <field name="save_amount" invisible="1"/>
-                            <field name="save_date" invisible="1"/>
-                            <field name="save_journal_id" invisible="1"/>
+                            <field name="company_id" invisible="1" />
+                            <field name="payment_type" invisible="1" />
+                            <field name="save_amount" invisible="1" />
+                            <field name="save_date" invisible="1" />
+                            <field name="save_journal_id" invisible="1" />
                             <field name="partner_type" widget="selection" invisible="1"/>
-                            <field name="partner_id" attrs="{'required': [('state', '=', 'draft'), ('payment_type', 'in', ('inbound', 'outbound'))], 'invisible': [('payment_type', 'not in', ('inbound', 'outbound'))]}" context="{'default_is_company': True, 'default_supplier': payment_type == 'outbound', 'default_customer': payment_type == 'inbound'}"/>
+                            <field name="partner_id" attrs="{
+                                'required': [('state', '=', 'draft'), ('payment_type', 'in', ('inbound', 'outbound'))],
+                                'invisible': [('payment_type', 'not in', ('inbound', 'outbound'))]
+                                }"
+                                context="{
+                                    'default_is_company': True,
+                                    'default_supplier': payment_type == 'outbound',
+                                    'default_customer': payment_type == 'inbound'
+                                    }"/>
                             <label for="amount"/>
                             <div name="amount_div" class="o_row">
                                 <field name="amount" />
-                                <field name="currency_id" options="{'no_create': True, 'no_open': True}" groups="base.group_multi_currency" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                                <field name="currency_id"
+                                       options="{'no_create': True, 'no_open': True}"
+                                       groups="base.group_multi_currency"
+                                       attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                             </div>
                             <field name="journal_id" widget="selection" />
-                            <field name="destination_journal_id" widget="selection" attrs="{'required': [('payment_type', '=', 'transfer')], 'invisible': [('payment_type', '!=', 'transfer')], 'readonly': [('state', '!=', 'draft')]}"/>
+                            <field name="destination_journal_id"
+                                   widget="selection"
+                                   attrs="{
+                                       'required': [('payment_type', '=', 'transfer')],
+                                       'invisible': [('payment_type', '!=', 'transfer')],
+                                       'readonly': [('state', '!=', 'draft')]}"/>
                             <field name="hide_payment_method" invisible="1"/>
-                            <field name="payment_method_id" string=" " widget="radio" attrs="{'invisible': [('hide_payment_method', '=', True)]}"/>
+                            <field name="payment_method_id" string=" " widget="radio"
+                                   attrs="{'invisible': [('hide_payment_method', '=', True)]}"/>
                             <field name="payment_method_code" invisible="1"/>
                         </group>
                         <group>
                             <field name="payment_date" />
-                            <field name="communication" attrs="{'invisible': [('state', '!=', 'draft'), ('communication', '=', False)]}"/>
+                            <field name="communication"
+                                   attrs="{'invisible': [('state', '!=', 'draft'), ('communication', '=', False)]}"/>
                             <field name="folio_id" readonly="1" force_save="1"/>
                         </group>
                     </group>
