--- a/pms/wizard/folio_make_invoice_advance_views.xml
+++ b/pms/wizard/folio_make_invoice_advance_views.xml
@@ -18,7 +18,7 @@
                             <div attrs="{'invisible': [('advance_payment_method', 'not in', ('fixed','percentage'))]}">
                                 <field name="amount"
                                     attrs="{'required': [('advance_payment_method', 'in', ('fixed','percentage'))]}" class="oe_inline" widget="monetary"/>
-                                <label string="%%"
+                                <label for="" string="%%"
                                     attrs="{'invisible': [('advance_payment_method', '!=', 'percentage')]}" class="oe_inline"/>
                             </div>
                             <field name="deposit_account_id" class="oe_inline"
@@ -93,7 +93,7 @@
             <field name="res_model">folio.advance.payment.inv</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
-            <field name="groups_id" eval="[(4,ref('sales_team.group_sale_salesman'))]"/>
+            <field name="groups_id" eval="[(4,ref('pms.group_pms_user'))]"/>
         </record>
 
 </odoo>
