--- a/pms/views/inherited_webclient_templates.xml
+++ b/pms/views/inherited_webclient_templates.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
         <template id="assets_backend" name="pms assets" inherit_id="web.assets_backend">
-            <xpath expr="." position="inside">
-                <script
-                    type="text/javascript"
-                    src="/pms/static/src/js/widgets/switch_pms_menu.js"
-                />
+            <xpath expr="//script[last()]" position="after">
+                <script type="text/javascript" src="/pms/static/src/js/session.js"></script>
+                <script type="text/javascript" src="/pms/static/src/js/widgets/switch_property_menu.js"></script>
             </xpath>
         </template>
     </data>
