[MIG] V13 properties menu

--- a/pms/views/inherited_webclient_templates.xml
+++ b/pms/views/inherited_webclient_templates.xml
@@ -4,6 +4,7 @@
         <template id="assets_backend" name="pms assets" inherit_id="web.assets_backend">
             <xpath expr="//script[last()]" position="after">
                 <script type="text/javascript" src="/pms/static/src/js/session.js"></script>
+                <script type="text/javascript" src="/pms/static/src/js/inherited_abstract_web_client.js"></script>
                 <script type="text/javascript" src="/pms/static/src/js/widgets/switch_property_menu.js"></script>
             </xpath>
         </template>
